backend for reel-saver

--- a/backend/config.env.example
+++ b/backend/config.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/insta_extension
+MONGODB_URI=mongodb://localhost:27017/xxxxxxxxx
 # For production: mongodb+srv://username:password@cluster.mongodb.net/insta_extension
 
 # JWT Configuration
