updated time to UTC

--- a/frontend/frontend/env.example
+++ b/frontend/frontend/env.example
@@ -1,7 +1,7 @@
 # Frontend Environment Variables
 
 # API Configuration
-VITE_API_URL=http://localhost:3005/api
+VITE_API_URL=https://reelsaver.onrender.com/api
 
 # Firebase Configuration (replace with your actual values)
 VITE_FIREBASE_API_KEY=your_firebase_api_key
